plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'org.jetbrains.changelog' version '2.2.1'
    id 'xyz.wagyourtail.unimined' version '1.4.1'
}

apply from: 'gradle/scripts/helpers.gradle'

// Early Assertions
assertProperty 'mod_version'
assertProperty 'root_package'
assertProperty 'mod_id'
assertProperty 'mod_name'

if (propertyBool('generate_reference_class')) {
    generateReferenceClass()
}

assertSubProperties 'use_access_transformer', 'access_transformer_locations'
assertSubProperties 'is_coremod', 'coremod_includes_mod', 'coremod_plugin_class_name'
assertSubProperties 'use_asset_mover', 'asset_mover_version'

setDefaultProperty 'generate_sources_jar', true, false
setDefaultProperty 'generate_javadocs_jar', true, false
setDefaultProperty 'minecraft_username', true, 'Developer'
setDefaultProperty 'extra_jvm_args', false, ''

version = propertyString('mod_version')
group = propertyString('root_package')

base {
    archivesName.set(propertyString('mod_id'))
}


java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
    if (propertyBool('generate_sources_jar')) {
        withSourcesJar()
    }
    if (propertyBool('generate_javadocs_jar')) {
        withJavadocJar()
    }
}


configurations {
    configureEach { // LWJGL2 isn't friendly with us, so pye pye
        exclude group: 'org.apache.httpcomponents'
    }
    embed
    contain
    implementation.extendsFrom(embed)
    implementation.extendsFrom(contain)
    modCompileOnly
    compileOnly.extendsFrom modCompileOnly
}


tasks.register('simplelogicJar', Jar) {
    archiveBaseName = "SimpleLogic"
    archiveClassifier = ""
    doFirst {
        manifest {
            def attribute_map = [:]
            attribute_map['ModType'] = "CRL"
            attributes(attribute_map)
        }
    }

    from(sourceSets.main.output) {
        include "META-INF/MANIFEST.MF"
        include "licenses/**"
        include "pl/asie/simplelogic/**"
        include "pack.mcmeta"
    }
}

unimined.minecraft {
    version "1.12.2"

    mappings {
        mcp("stable", "39-1.12")
    }

    cleanroom {
        if (propertyBool('use_access_transformer')) {
            accessTransformer "${rootProject.projectDir}/src/main/resources/" +  propertyString('access_transformer_locations')
        }
        loader "0.3.13-alpha"
        runs.auth.username = minecraft_username
        runs.all {
            def extraArgs = propertyString('extra_jvm_args')
            if (extraArgs != null && !extraArgs.trim().isEmpty()) {
                jvmArgs += extraArgs.split("\\s+").toList()
            }
            if (propertyBool('enable_foundation_debug')) {
                var map = getSystemProperties()
                map.put("foundation.dump", "true")
                map.put("foundation.verbose", "true")
            }
            return
        }
    }

    defaultRemapJar = false

    remap(jar)
    remap(simplelogicJar)


    mods {
        remap(configurations.modCompileOnly)
    }
}

dependencies {
    if (propertyBool('use_asset_mover')) {
        implementation "com.cleanroommc:assetmover:${propertyString('asset_mover_version')}"
    }
    if (propertyBool('enable_junit_testing')) {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }
}

apply from: 'gradle/scripts/dependencies.gradle'

sourceSets {
    main {
        resources {
            srcDirs += 'lang'
            srcDirs += 'docs'
        }
    }
}

processResources {

    inputs.property 'version', propertyString('mod_version')

    def filterList = ['mcmod.info']

    filesMatching(filterList) { fcd ->
        fcd.expand(
                'version': propertyString('mod_version')
        )
    }

}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    if (configurations.contain.size() > 0) {
        into('/') {
            from configurations.contain
        }
    }
    doFirst {
        manifest {
            def attribute_map = [:]
            attribute_map['ModType'] = "CRL"
            if (configurations.contain.size() > 0) {
                attribute_map['ContainedDeps'] = configurations.contain.collect { it.name }.join(' ')
                attribute_map['NonModDeps'] = true
            }
            if (propertyBool('is_coremod')) {
                attribute_map['FMLCorePlugin'] = propertyString('coremod_plugin_class_name')
                if (propertyBool('coremod_includes_mod')) {
                    attribute_map['FMLCorePluginContainsFMLMod'] = true
                }
            }
            if (propertyBool('use_access_transformer')) {
                attribute_map['FMLAT'] = propertyString('access_transformer_locations')
            }
            attributes(attribute_map)
        }
    }
    archiveBaseName = "Charset"
    archiveClassifier = "full"

    from(sourceSets.main.output) {
        include "META-INF/**"
        include "assets/charset/**"
        include "assets/simplelogic/**"
        include "licenses/**"
        include "pl/asie/charset/**"
        include "mcmod.info"
        include "pack.mcmeta"
    }
    finalizedBy(tasks.named('remapJar'))
}





compileTestJava {
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_21
}

tasks.register('apiJar', Jar) {
    archiveClassifier = "api"
    from(sourceSets.main.output) {
        include "pl/asie/charset/api/**"
        include "licenses/**"
    }
}

remapSimplelogicJar.dependsOn simplelogicJar

artifacts {
    archives apiJar
    archives remapSimplelogicJar
    archives remapJar
}

remapJar {
    archiveBaseName = "Charset"
    archiveClassifier = "full"
}

remapSimplelogicJar {
    archiveBaseName = "SimpleLogic"
    archiveClassifier = ""
}

test {
    useJUnitPlatform()
    javaLauncher.set(javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    })
    if (propertyBool('show_testing_output')) {
        testLogging {
            showStandardStreams = true
        }
    }
}


def generateReferenceClass() {
    var target = new File("${rootProject.projectDir}/src/main/java/${root_package.replace('.', '/')}/${mod_id}/Reference.java")
    var template = new File("${rootProject.projectDir}/template/Reference.java")
    var replaceMap = [$package : "${root_package}.${mod_id}", $mod_id : mod_id, $mod_name : mod_name, $mod_version : mod_version]
    target.withWriter { var writer ->
        template.eachLine { var line ->
            replaceMap.each {if (line.contains(it.key)) line = line.replace(it.key, it.value)}
            writer.write(line + "\n");
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

apply from: 'gradle/scripts/publishing.gradle'
apply from: 'gradle/scripts/extra.gradle'
